--- a/index.htm
+++ b/index.htm
@@ -32,9 +32,12 @@
     function da() {
         localStorage.clear();
     }
+    function sa(){
+        alert(localStorage.name + "\n\n\n email:" + localStorage.email);
+    }
 </script>
 <body>
-   <center>................<img src="logo.png" alt="120 pixel js">..................<right><a href="uemo.htm" id="jho">FQA</a><button onclick="da()" id="ioi">Delete accont</button></right><br><a onclick="j2()">
+   <center>................<img src="logo.png" alt="120 pixel js">..................<right><a href="uemo.htm" id="jho">FQA</a><button onclick="da()" id="ioi">Delete accont</button><button onclick="sa()">see account</button></right><br><a onclick="j2()">
 <form action="https://formsubmit.co/120pixeljd@gmail.com" method="POST">
      <input type="text" name="name" placeholder="name" required>
      <input type="email" name="email" placeholder="email" required>
